--- a/_config.yml
+++ b/_config.yml
@@ -127,6 +127,7 @@ navigation_header:
   Home: /
   Brewing: /brewing/
   Enameling: /enameling/
+  Other A&S: /misc/
   Documentation: /documents/
   Presence: /presence/
   About: /about/
