--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ collections:
   posts:
     title: Posts # Needed for Siteleaf
     output: true
-    description: "My thoughts and ideas" # The post list page content
+    description: "A&S Research and Thoughts" # The post list page content
     feature_text: |
       Welcome to Edgar's A&S!
     feature_image: "https://picsum.photos/2560/600?image=866"
