--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,8 @@ collections:
     description: "A&S Research and Thoughts" # The post list page content
     feature_text: |
       Welcome to Edgar's A&S!
-    feature_image: "https://picsum.photos/2560/600?image=866"
+    feature_image: "/assets/images/sca_camp.jpg"
+
 
 # 6. Jekyll collections settings
 defaults:
