--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,8 @@ description: A&S Projects and Research
 plugins: 
 - jekyll-remote-theme
 
-remote_theme: daviddarnes/alembic
+#remote_theme: daviddarnes/alembic
+theme: jekyll-theme-slate
 
 # Site configuration
 # 1. Files excluded from Jekyll builds
