--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,7 @@ description: A&S Projects and Research
 plugins: 
 - jekyll-remote-theme
 
-#remote_theme: daviddarnes/alembic
-theme: jekyll-theme-slate
+remote_theme: daviddarnes/alembic
 
 # Site configuration
 # 1. Files excluded from Jekyll builds
