--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ description: A&S Projects and Research
 plugins: 
 - jekyll-remote-theme
 
-remote_theme: daviddarnes/alembic
+remote_theme: refskeggbrewing/alembic
 
 # Site configuration
 # 1. Files excluded from Jekyll builds
