--- a/_config.yml
+++ b/_config.yml
@@ -97,10 +97,10 @@ collections:
   posts:
     title: Posts # Needed for Siteleaf
     output: true
-    description: "A&S Research and Thoughts" # The post list page content
+    description: "A&S Research and Thoughts" 
     feature_text: |
       Welcome to Edgar's A&S!
-    feature_image: "/assets/images/sca_camp.jpg"
+    feature_image: "/assets/images/blog_feature.jpg"
 
 
 # 6. Jekyll collections settings
